--- a/app/src/components/Vinyl/Vinyl.module.css
+++ b/app/src/components/Vinyl/Vinyl.module.css
@@ -8,31 +8,114 @@
   margin-top: 30px;
 }
 
-.header {
-  color: #626372;
-  font-size: 80%;
-  font-weight: 500;
+.navContainer {
+  display: flex;
+  margin-bottom: 30px;
+  margin-top: 50px;
+  padding: 6px;
+  border-radius: 10px;
+  background: #eceff3;
+  width: fit-content;
+}
+
+.navLink {
+  font-size: 70%;
+  font-weight: 600;
+  padding: 8px 12px;
+  cursor: pointer;
+  color: #00000091;
+  transition: 300ms;
+  border-radius: 8px;
+  margin-right: 5px;
+}
+
+.navLink:hover {
+  color: #000;
 }
 
 .gridContainer {
-  margin-top: 20px;
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 25px;
+  row-gap: 50px;
+  place-items: center;
+  margin-bottom: 50px;
 }
 
 .productContainer {
-  border-radius: 4px;
   width: fit-content;
+  box-shadow: 0px 3px 8px #c4c8d6;
+  border-radius: 10px;
+  overflow: hidden;
+  transition: 300ms;
+  /* box-shadow: 0px 5px 10px #a3a3a3; */
+}
+
+.productContainer:hover {
+  box-shadow: 0px 15px 50px #abafbb;
+}
+
+.infoContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 20px;
 }
 
 .image {
   height: 300px;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
 }
 
 .title {
   font-weight: 500;
   font-size: 90%;
   margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   text-align: center;
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.detailsBtn {
+  background: #e2e5e9;
+  border: none;
+  border-radius: 8px;
+  padding: 10px;
+  width: 100px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  cursor: pointer;
+  letter-spacing: 0.5px;
+  color: #000;
+  transition: 300ms;
+  margin-left: 10px;
+  box-shadow: 0px 1px 3px #0000003b;
+}
+
+.detailsBtn:hover {
+  /* background: #cfd2da; */
+  box-shadow: 0px 10px 20px #0000003a;
+}
+
+.buyNowBtn {
+  background: linear-gradient(45deg, #5e0059, #0b8793);
+  border: none;
+  border-radius: 8px;
+  padding: 10px;
+  width: 100px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  cursor: pointer;
+  letter-spacing: 0.5px;
+  color: #fff;
+  transition: 400ms;
+}
+
+.buyNowBtn:hover {
+  /* transform: scale(0.97); */
+  box-shadow: 0px 10px 20px #9b9fbb;
 }
