--- a/app/src/components/Collection/Collection.module.css
+++ b/app/src/components/Collection/Collection.module.css
@@ -2,7 +2,125 @@
   margin-top: 75px;
 }
 
-.title {
+.header {
   font-size: 110%;
   font-weight: 600;
+}
+
+.productContainer {
+  width: fit-content;
+  box-shadow: 0px 3px 8px #c4c8d6;
+  border-radius: 10px;
+  overflow: hidden;
+  transition: 300ms;
+  /* box-shadow: 0px 5px 10px #a3a3a3; */
+}
+
+/* .productContainer:hover {
+  box-shadow: 0px 15px 50px #abafbb;
+} */
+
+.infoContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 20px;
+}
+
+.image {
+  height: 300px;
+}
+
+.title {
+  font-weight: 500;
+  font-size: 90%;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.detailsBtn {
+  /* background: #e2e5e9; */
+  background: #eceff3;
+  border: none;
+  border-radius: 8px;
+  padding: 10px;
+  width: 100px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  cursor: pointer;
+  letter-spacing: 0.5px;
+  color: #000;
+  transition: 300ms;
+  margin-left: 10px;
+  box-shadow: 0px 1px 3px #0000003b;
+  font-size: 13.3px;
+  text-decoration: none;
+  text-align: center;
+}
+
+.detailsBtn:hover {
+  /* background: #cfd2da; */
+  box-shadow: 0px 10px 20px #0000003a;
+}
+
+.buyNowBtn {
+  background: linear-gradient(45deg, #5e0059, #0b8793);
+  border: none;
+  border-radius: 8px;
+  padding: 10px;
+  width: 100px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  cursor: pointer;
+  letter-spacing: 0.5px;
+  color: #fff;
+  transition: 400ms;
+  font-size: 13.3px;
+  text-decoration: none;
+  text-align: center;
+}
+
+.buyNowBtn:hover {
+  /* transform: scale(0.97); */
+  box-shadow: 0px 10px 20px #9b9fbb;
+}
+
+.slideContainer {
+  max-width: 300px;
+}
+
+.viewVinylBtnContainer {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  bottom: 36px;
+}
+
+.viewVinylBtn {
+  background: #fff;
+  box-shadow: 0px 10px 20px #c1c2cc;
+  border-radius: 8px;
+  padding: 14px 30px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  cursor: pointer;
+  letter-spacing: 0.5px;
+  color: #5e6066;
+  transition: 300ms;
+  font-size: 13.3px;
+  text-decoration: none;
+  text-align: center;
+  position: relative;
+  z-index: 9999;
+}
+
+.viewVinylBtn:hover {
+  box-shadow: 0px 4px 5px #b3b4be;
+  color: #000;
 }
