--- a/app/src/index.css
+++ b/app/src/index.css
@@ -2,13 +2,44 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
-body, html {
+body,
+html {
   font-weight: 400;
   font-size: 20px;
   background: #fff;
   color: #000;
 }
 
+.swiper-button-prev,
+.swiper-button-next {
+  background: #fff;
+  border-radius: 50%;
+  height: 40px !important;
+  width: 40px !important;
+  top: 88% !important;
+  box-shadow: 0px 0px 15px #abafbb;
+  /* opacity: 0.8; */
+  transition: 200ms;
+}
+
+.swiper-button-prev {
+  left: 20px !important;
+}
+
+.swiper-button-next {
+  right: 20px !important;
+}
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+  box-shadow: 0px 0px 5px #8b8e97;
+}
+
+.swiper-button-prev:after,
+.swiper-button-next:after {
+  font-size: 70% !important;
+  color: #000;
+}
