--- a/app/src/components/Nav/Nav.module.css
+++ b/app/src/components/Nav/Nav.module.css
@@ -18,7 +18,9 @@
 .title {
   font-weight: 700;
   text-decoration: none;
+  font-size: 120%;
   color: #0c0d0f;
+  font-family: "Signika", sans-serif;
 }
 
 .link {
@@ -36,11 +38,10 @@
 }
 
 .visitBtn {
-  background: linear-gradient(45deg, #5e0059, #0b8793);
+  background: linear-gradient(to right, #fe8c00, #f83600);
   border: none;
   border-radius: 8px;
   padding: 10px 16px;
-  font-family: "Montserrat", sans-serif;
   font-weight: 500;
   cursor: pointer;
   letter-spacing: 0.5px;
