--- a/app/src/components/Collection/Collection.module.css
+++ b/app/src/components/Collection/Collection.module.css
@@ -5,12 +5,13 @@
 .header {
   font-size: 110%;
   font-weight: 600;
+  text-transform: capitalize;
 }
 
 .productContainer {
   width: fit-content;
   box-shadow: 0px 3px 8px #c4c8d6;
-  border-radius: 10px;
+  border-radius: 6px;
   overflow: hidden;
   transition: 300ms;
   /* box-shadow: 0px 5px 10px #a3a3a3; */
@@ -51,7 +52,6 @@
   border-radius: 8px;
   padding: 10px;
   width: 100px;
-  font-family: "Montserrat", sans-serif;
   font-weight: 500;
   cursor: pointer;
   letter-spacing: 0.5px;
@@ -70,12 +70,13 @@
 }
 
 .buyNowBtn {
-  background: linear-gradient(45deg, #5e0059, #0b8793);
+  /* background: linear-gradient(45deg, #5e0059, #0b8793); */
+  /* background: linear-gradient(45deg, #ff00cc, #333399); */
+  background: linear-gradient(to right, #fe8c00, #f83600);
   border: none;
   border-radius: 8px;
   padding: 10px;
   width: 100px;
-  font-family: "Montserrat", sans-serif;
   font-weight: 500;
   cursor: pointer;
   letter-spacing: 0.5px;
@@ -88,7 +89,7 @@
 
 .buyNowBtn:hover {
   /* transform: scale(0.97); */
-  box-shadow: 0px 10px 20px #9b9fbb;
+  box-shadow: 0px 10px 20px #bbc0dd;
 }
 
 .slideContainer {
@@ -107,7 +108,6 @@
   box-shadow: 0px 10px 20px #c1c2cc;
   border-radius: 8px;
   padding: 14px 30px;
-  font-family: "Montserrat", sans-serif;
   font-weight: 600;
   cursor: pointer;
   letter-spacing: 0.5px;
