--- a/app/src/components/Vinyl/Vinyl.module.css
+++ b/app/src/components/Vinyl/Vinyl.module.css
@@ -47,14 +47,14 @@
 .productContainer {
   width: fit-content;
   box-shadow: 0px 3px 8px #c4c8d6;
-  border-radius: 10px;
+  border-radius: 6px;
   overflow: hidden;
   transition: 300ms;
   /* box-shadow: 0px 5px 10px #a3a3a3; */
 }
 
 .productContainer:hover {
-  box-shadow: 0px 15px 50px #abafbb;
+  box-shadow: 0px 15px 50px #c4c8d6;
 }
 
 .infoContainer {
@@ -88,7 +88,6 @@
   border-radius: 8px;
   padding: 10px;
   width: 100px;
-  font-family: "Montserrat", sans-serif;
   font-weight: 500;
   cursor: pointer;
   letter-spacing: 0.5px;
@@ -107,12 +106,13 @@
 }
 
 .buyNowBtn {
-  background: linear-gradient(45deg, #5e0059, #0b8793);
+  /* background: linear-gradient(45deg, #5e0059, #0b8793); */
+  /* background: linear-gradient(45deg, #ff00cc, #333399); */
+  background: linear-gradient(to right, #fe8c00, #f83600);
   border: none;
   border-radius: 8px;
   padding: 10px;
   width: 100px;
-  font-family: "Montserrat", sans-serif;
   font-weight: 500;
   cursor: pointer;
   letter-spacing: 0.5px;
@@ -125,5 +125,5 @@
 
 .buyNowBtn:hover {
   /* transform: scale(0.97); */
-  box-shadow: 0px 10px 20px #9b9fbb;
+  box-shadow: 0px 10px 20px #bbc0dd;
 }
