--- a/app/src/components/Collection/Collection.module.css
+++ b/app/src/components/Collection/Collection.module.css
@@ -70,9 +70,7 @@
 }
 
 .buyNowBtn {
-  /* background: linear-gradient(45deg, #5e0059, #0b8793); */
-  /* background: linear-gradient(45deg, #ff00cc, #333399); */
-  background: linear-gradient(to right, #fe8c00, #f83600);
+  background: linear-gradient(to right, #8a2387, #e94057, #f27121);
   border: none;
   border-radius: 8px;
   padding: 10px;
