--- a/app/src/components/Form/Form.module.css
+++ b/app/src/components/Form/Form.module.css
@@ -16,6 +16,15 @@
   font-family: "Signika", sans-serif;
 }
 
+.description {
+  font-size: 75%;
+  line-height: 1.4;
+  font-weight: 500;
+  text-align: center;
+  max-width: 400px;
+  margin: auto;
+}
+
 .inputContainer {
   position: relative;
   width: 100%;
@@ -47,6 +56,7 @@
   transition: 300ms;
   width: 100%;
   resize: none;
+  font-weight: 600;
 }
 
 .input:focus,
@@ -60,7 +70,7 @@
 
 .inputContainer:focus-within .label {
   top: 0;
-  background: linear-gradient(to right, #fe8c00, #f83600);
+  background: linear-gradient(to right, #8a2387, #e94057, #f27121);
   color: #fff;
   padding: 1px 4px;
   border-radius: 5px;
@@ -70,7 +80,7 @@
 
 .filled {
   top: 0;
-  background: linear-gradient(to right, #fe8c00, #f83600);
+  background: linear-gradient(to right, #8a2387, #e94057, #f27121);
   color: #fff;
   padding: 1px 3px;
   border-radius: 5px;
@@ -88,7 +98,7 @@
 }
 
 .submitBtn {
-  background: linear-gradient(to right, #fe8c00, #f83600);
+  background: linear-gradient(to right, #8a2387, #e94057, #f27121);
   font-weight: 500;
   font-size: 14px;
   color: #fff;
@@ -115,4 +125,16 @@
   margin-top: 4px;
   left: 4px;
   color: #e00000;
+}
+
+@media only screen and (max-width: 930px) {
+  .wrapper {
+    padding-top: 0px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .description {
+    font-size: 70%;
+  }
 }
