--- a/app/src/components/Nav/Nav.module.css
+++ b/app/src/components/Nav/Nav.module.css
@@ -18,9 +18,9 @@
 .title {
   font-weight: 700;
   text-decoration: none;
-  font-size: 120%;
+  font-size: 110%;
   color: #0c0d0f;
-  font-family: "Signika", sans-serif;
+  /* font-family: "Signika", sans-serif; */
 }
 
 .link {
@@ -38,7 +38,7 @@
 }
 
 .visitBtn {
-  background: linear-gradient(to right, #fe8c00, #f83600);
+  background: linear-gradient(to right, #8a2387, #e94057, #f27121);
   border: none;
   border-radius: 8px;
   padding: 10px 16px;
@@ -51,5 +51,12 @@
 
 .visitBtn:hover {
   transform: scale(0.97);
-  box-shadow: 0px 10px 20px #bfc3e0;
+  box-shadow: 0px 1
+  0px 20px #bfc3e0;
+}
+
+@media only screen and (max-width: 930px) {
+  .linkContainer {
+    display: none;
+  }
 }
