--- a/app/src/components/Vinyl/Vinyl.module.css
+++ b/app/src/components/Vinyl/Vinyl.module.css
@@ -106,9 +106,7 @@
 }
 
 .buyNowBtn {
-  /* background: linear-gradient(45deg, #5e0059, #0b8793); */
-  /* background: linear-gradient(45deg, #ff00cc, #333399); */
-  background: linear-gradient(to right, #fe8c00, #f83600);
+  background: linear-gradient(to right, #8a2387, #e94057, #f27121);
   border: none;
   border-radius: 8px;
   padding: 10px;
@@ -126,4 +124,12 @@
 .buyNowBtn:hover {
   /* transform: scale(0.97); */
   box-shadow: 0px 10px 20px #bbc0dd;
+}
+
+@media only screen and (max-width: 673px) {
+  .navContainer {
+    margin: auto;
+    margin-bottom: 30px;
+    margin-top: 50px;
+  }
 }
